<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B65211"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_margin="4dp"
        app:cardCornerRadius="3dp"
        android:background="#674936"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B65211"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:src="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="389dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtVoteLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:gravity="left"
                        android:text="@string/voteLine"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/txtVote"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:gravity="right"
                        android:text="@string/edit_message"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:gravity="left"
                        android:text="@string/txtReleaseDate"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/releaseDate"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:gravity="right"
                        android:text="@string/releaseDate"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/txt_Overview"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>